--- a/iTrace/iTrace.vcxproj
+++ b/iTrace/iTrace.vcxproj
@@ -173,6 +173,7 @@
     <ClInclude Include="SoundReflectivity.h" />
     <ClInclude Include="text.h" />
     <ClInclude Include="Texture.h" />
+    <ClInclude Include="Weather.h" />
     <ClInclude Include="Window.h" />
     <ClInclude Include="WorldManager.h" />
   </ItemGroup>
@@ -204,6 +205,7 @@
     <ClCompile Include="SoundEffectManager.cpp" />
     <ClCompile Include="text.cpp" />
     <ClCompile Include="Texture.cpp" />
+    <ClCompile Include="Weather.cpp" />
     <ClCompile Include="Window.cpp" />
     <ClCompile Include="WorldManager.cpp" />
   </ItemGroup>
