--- a/iTrace/iTrace.vcxproj
+++ b/iTrace/iTrace.vcxproj
@@ -164,6 +164,7 @@
     <ClInclude Include="ItemRenderer.h" />
     <ClInclude Include="LightCombiner.h" />
     <ClInclude Include="ParallaxBaker.h" />
+    <ClInclude Include="Particles.h" />
     <ClInclude Include="Pipeline.h" />
     <ClInclude Include="Profiler.h" />
     <ClInclude Include="RainDropBaker.h" />
@@ -198,6 +199,7 @@
     <ClCompile Include="LightCombiner.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="ParallaxBaker.cpp" />
+    <ClCompile Include="Particles.cpp" />
     <ClCompile Include="Pipeline.cpp" />
     <ClCompile Include="Profiler.cpp" />
     <ClCompile Include="RainDropBaker.cpp" />
@@ -254,6 +256,8 @@
     <None Include="Shaders\LightCombiner\shader.vert" />
     <None Include="Shaders\ParallaxBakeShader\shader.frag" />
     <None Include="Shaders\ParallaxBakeShader\shader.vert" />
+    <None Include="Shaders\ParticleShader\shader.frag" />
+    <None Include="Shaders\ParticleShader\shader.vert" />
     <None Include="Shaders\PlayerModelShader\shader.frag" />
     <None Include="Shaders\PlayerModelShader\shader.vert" />
     <None Include="Shaders\PrepShader\shader.frag" />
