Better raindrops, better weather, OBS bug fixed, SSBO abstraction layer added.

--- a/iTrace/iTrace.vcxproj
+++ b/iTrace/iTrace.vcxproj
@@ -169,6 +169,7 @@
     <ClInclude Include="Profiler.h" />
     <ClInclude Include="RainDropBaker.h" />
     <ClInclude Include="Shader.h" />
+    <ClInclude Include="ShaderBuffer.h" />
     <ClInclude Include="SkyRenderer.h" />
     <ClInclude Include="Sound.h" />
     <ClInclude Include="SoundEffectManager.h" />
