--- a/iTrace/iTrace.vcxproj
+++ b/iTrace/iTrace.vcxproj
@@ -275,6 +275,8 @@
     <None Include="Shaders\PrepShader\shader.vert" />
     <None Include="Shaders\PreSpatialTemporal\shader.frag" />
     <None Include="Shaders\PreSpatialTemporal\shader.vert" />
+    <None Include="Shaders\PrimaryDeferredRefractive\shader.frag" />
+    <None Include="Shaders\PrimaryDeferredRefractive\shader.vert" />
     <None Include="Shaders\PrimarySoundTracing\shader.frag" />
     <None Include="Shaders\PrimarySoundTracing\shader.vert" />
     <None Include="Shaders\RainBaker\shader.frag" />
