--- a/iTrace/iTrace.vcxproj.filters
+++ b/iTrace/iTrace.vcxproj.filters
@@ -220,6 +220,9 @@
     <Filter Include="Shaders\Tonemap">
       <UniqueIdentifier>{ff75bb6c-9df7-43c1-a76a-0300ae0388fd}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Shaders\Glow">
+      <UniqueIdentifier>{928c7d47-4d2a-49e6-8eb1-6c158644dea1}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Pipeline.h">
@@ -342,6 +345,9 @@
     <ClInclude Include="PlayerModel.h">
       <Filter>Header Files\World</Filter>
     </ClInclude>
+    <ClInclude Include="ViewBob.h">
+      <Filter>Header Files\World</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Pipeline.cpp">
@@ -451,6 +457,9 @@
     </ClCompile>
     <ClCompile Include="CausticBaker.cpp">
       <Filter>Source Files\Baker</Filter>
+    </ClCompile>
+    <ClCompile Include="ViewBob.cpp">
+      <Filter>Source Files\World</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -753,6 +762,12 @@
     </None>
     <None Include="Shaders\Tonemap\shader.vert">
       <Filter>Shaders\Tonemap</Filter>
+    </None>
+    <None Include="Shaders\Glow\shader.vert">
+      <Filter>Shaders\Glow</Filter>
+    </None>
+    <None Include="Shaders\Glow\shader.frag">
+      <Filter>Shaders\Glow</Filter>
     </None>
   </ItemGroup>
 </Project>
